@@ -1,3 +1,9 @@
+2000-10-24  Heikki Hannikainen <hessu@hes.iki.fi>
+
+	* clients.c, esd-server.h, esd.c, players.c, proto.c: Added
+	support for multiple recording clients. Pretty straightforward
+	cloning of player clients handling code.
+
 2000-09-13  Timur Bakeyev <mc@bat.ru>
 
 	* esd.c: Reset to zero sockaddr_in structure. Without that BSDI doesn't
